--- a/zoom-around.html
+++ b/zoom-around.html
@@ -117,8 +117,8 @@ void main() {
   gl_FragColor = outColor;
 }
   </script>
-  <script src="../dist/3.x/twgl-full.min.js"></script>
-  <script src="../3rdparty/chroma.min.js"></script>
+  <script src="twgl-full.min.js"></script>
+  <script src="chroma.min.js"></script>
   <script>
     "use strict";
     twgl.setDefaults({attribPrefix: "a_"});
